# swagger_output.json
@@ -8,7 +8,8 @@
   "host": "my-branda.herokuapp.com",
   "basePath": "/",
   "schemes": [
-    "https"
+    "https",
+    "http"
   ],
   "securityDefinitions": {
     "Authorization": {
@@ -26,6 +27,29 @@
     "application/json"
   ],
   "paths": {
+    "/auth/login": {
+      "post": {
+        "tags": [
+          "Auth"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/LoginModel"
+            }
+          }
+        ],
+        "responses": {
+          "200":{
+            "description":"Login successfully"
+          }
+        }
+      }
+    },
     "/auth/register": {
       "post": {
         "tags": [
@@ -43,6 +67,12 @@
           }
         ],
         "responses": {
+          "200": {
+            "description": "User registered successfully"
+          },
+          "409": {
+            "description": "User already Exist"
+          },
           "422": {
             "description": "Unprocessable Entity"
           }
@@ -62,44 +92,6 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/VerifyEmailModel"
-            }
-          }
-        ],
-        "responses": {}
-      }
-    },
-    "/auth/forgotPassword": {
-      "post": {
-        "tags": [
-          "Auth"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/ForgotPassWordModel"
-            }
-          }
-        ],
-        "responses": {}
-      }
-    },
-    "/auth/resetPassword": {
-      "post": {
-        "tags": [
-          "Auth"
-        ],
-        "description": "",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/ResetPasswordModel"
             }
           }
         ],
@@ -140,13 +132,20 @@
         ]
       }
     },
-    "/api/profile": {
+    "/auth/profile/{id}": {
       "get": {
         "tags": [
           "Profile"
         ],
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name":"id",
+            "in":"path",
+            "type":"string",
+            "required":true
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
@@ -164,12 +163,18 @@
           }
         ]
       },
-      "put": {
+      "patch": {
         "tags": [
           "Profile"
         ],
         "description": "",
         "parameters": [
+          {
+            "name":"id",
+            "in":"path",
+            "type":"string",
+            "required":true
+          },
           {
             "name": "obj",
             "in": "body",
@@ -185,6 +190,65 @@
           },
           "422": {
             "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Authorization": []
+          }
+        ]
+      }
+    },
+    "/auth/users": {
+      "get": {
+        "tags": [
+          "Admin"
+        ],
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "Retrieved"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Authorization": []
+          }
+        ]
+      }
+    },
+    "/auth/users/{id}": {
+      "get": {
+        "tags": [
+          "Admin"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -221,15 +285,31 @@
           "application/json"
         ],
         "parameters": [
-          { 
-            "name": "obj",
-            "in": "body",
+          {
+            "name": "file",
+            "in": "formData",
             "required": true,
-            "schema": {
-            "$ref": "#/definitions/BlogModel"
-         }
-       }       
-       ],
+            "type": "file"
+          },
+          {
+            "name": "category",
+            "in": "formData",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "title",
+            "in": "formData",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "content",
+            "in": "formData",
+            "required": true,
+            "type": "string"
+          }
+        ],      
         "responses": {
           "201": {
             "description": "Created"
@@ -273,7 +353,10 @@
         ],
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Updated"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "422": {
             "description": "Unprocessable Entity"
@@ -344,28 +427,18 @@
         ]
       }
     },
-    "/api/comments": {
-      "post": {
+    "/cont/contact/": {
+      "get": {
         "tags": [
-          "Comments"
+          "Admin"
         ],
         "description": "",
-        "parameters": [
-          {
-            "name": "obj",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "$ref": "#/definitions/CommentModel"
-            }
-          }
-        ],
         "responses": {
-          "201": {
-            "description": "Created"
+          "200": {
+            "description": "Retrieved"
           },
-          "422": {
-            "description": "Unprocessable Entity"
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -376,12 +449,57 @@
             "Authorization": []
           }
         ]
+      },
+      "post": {
+        "tags": [
+          "Contacts"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/ContactModel"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Query ok"
+          },
+          "422": {
+            "description": "Unprocessable Entity"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
       }
     },
+    "/auth/reg":{
+      "get":{
+"tags":[
+  "Auth"
+],
+"responses": {
+  "204": {
+    "description": "No Content"
+  },
+  "404": {
+    "description": "Not Found"
+  },
+  "500": {
+    "description": "Internal Server Error"
+  }
+}
+}
+    },
     "/api/comments/{id}": {
-      "delete": {
+      "get": {
         "tags": [
-          "Comments"
+          "Blogs"
         ],
         "description": "",
         "parameters": [
@@ -408,6 +526,75 @@
             "Authorization": []
           }
         ]
+      },
+      "patch": {
+        "tags": [
+          "Blogs"
+        ],
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "obj",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/CommentModel"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Authorization": []
+          }
+        ]
+      }
+    },
+    "/api/likes/{id}":{
+      "patch":{
+        "tags":[
+          "Blogs"
+        ],
+        "parameters":[
+          {
+            "name":"id",
+            "in":"path",
+            "type":"string",
+            "required":true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Liked"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        },
+        "security": [
+          {
+            "Authorization": []
+          }
+        ]
       }
     }
   },
@@ -417,11 +604,11 @@
       "properties": {
         "email": {
           "type": "string",
-          "example": "nezabruce@gmail.com.com"
+          "example": "john@gmail.com"
         },
         "password": {
           "type": "string",
-          "example": "Password123#"
+          "example": "Password123"
         }
       },
       "required": [
@@ -432,13 +619,17 @@
     "RegisterModel": {
       "type": "object",
       "properties": {
-        "name": {
+        "first_name": {
           "type": "string",
-          "example": "John Snow"
+          "example": "John"
+        },
+        "last_name": {
+          "type": "string",
+          "example": "Snow"
         },
         "email": {
           "type": "string",
-          "example": "mail@mail.com"
+          "example": "nezabruce@gmail.com"
         },
         "password": {
           "type": "string",
@@ -454,14 +645,54 @@
     "UpdateUserModel": {
       "type": "object",
       "properties": {
-        "name": {
+        "first_name": {
           "type": "string",
           "example": "John Snow"
+        },
+        "last_name": {
+          "type": "string",
+          "example": "John Snow"
+        },        
+        "email": {
+          "type": "string",
+          "example": "john@gmail.com"
+        }        
+      },
+      "required": [
+        "first_name",
+        "last_name",
+        "email"
+      ]
+    },
+    "ContactModel": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "example": "jonas blue"
+        },
+        "email": {
+          "type": "string",
+          "example": "john@gmail.com"
+        },
+        "message": {
+          "type": "string",
+          "example": "Hi bruce"
         }
       },
       "required": [
-        "name"
+        "email",
+        "password"
       ]
+    },
+    "CommentModel":{
+      "type":"object",
+      "properties":{
+       "comment":{
+         "type":"string",
+         "example":"nice one"
+       } 
+      }
     },
     "BlogModel": {
       "type": "object",
@@ -485,23 +716,6 @@
         "body"
       ]
     },
-    "CommentModel": {
-      "type": "object",
-      "properties": {
-        "story": {
-          "type": "string",
-          "example": "606576d16bb28e33ecf2872c"
-        },
-        "body": {
-          "type": "string",
-          "example": "That's very funny (:"
-        }
-      },
-      "required": [
-        "story",
-        "body"
-      ]
-    },
     "VerifyEmailModel": {
       "type": "object",
       "properties": {
@@ -519,49 +733,15 @@
       "properties": {
         "oldPassword": {
           "type": "string",
-          "example": "Password123#"
+          "example": "Password123"
         },
         "newPassword": {
           "type": "string",
-          "example": "Password789#"
+          "example": "Password789"
         }
       },
       "required": [
         "oldPassword",
-        "newPassword"
-      ]
-    },
-    "ForgotPassWordModel": {
-      "type": "object",
-      "properties": {
-        "email": {
-          "type": "string",
-          "example": "coommark@gmail.com"
-        }
-      },
-      "required": [
-        "email"
-      ]
-    },
-    "ResetPasswordModel": {
-      "type": "object",
-      "properties": {
-        "email": {
-          "type": "string",
-          "example": "coommark@gmail.com"
-        },
-        "code": {
-          "type": "number",
-          "example": 999999
-        },
-        "newPassword": {
-          "type": "string",
-          "example": "Password789#"
-        }
-      },
-      "required": [
-        "email",
-        "code",
         "newPassword"
       ]
     }
